--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- meta -->
   <meta charset="utf-8" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="description" content="How people define digital humanities." />
-  <meta name="author" content="Jason A. Heppler" />
+  <meta name="description" content="Shawn Messing around with Heppler's work on How people define digital humanities." />
+  <meta name="author" content="Shawn Graham" />
   <meta name="keywords" content="digital history, digital humanities" />
   <meta name="copyright" content="Copyright (c) 2014 Jason Hepler" />
   <title>What Is Digital Humanities?</title>
@@ -19,7 +19,7 @@
   <style type="text/css">
   body {
     color: #434343;
-    background: #fff;
+    background: #FF0000;
     line-height: 16px;
     margin: 40px;
   }
@@ -37,7 +37,7 @@
   }
 
   text.quote_text {
-    font-size: 25px;
+    font-size: 50px;
     line-height: 28px;
   }
 
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-  <h1>What Is Digital Humanities?</h1>
+  <h1>Oh DH Why do you trouble me so?</h1>
 
   <div id="content">
     <div class="row">
